BFAST -- History of visible changes.

Copyright (C) 2008, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.2.4
* Added a .sh script to update the tests since the reference
genome files and index files have their version numbers embedded.
* Updated balign "Validatin outputID" message.

Version 0.2.3
* Updated bfix to include packed.
* Updated bug when reading a bfast reference genome file.
* Added "make check" functionality for regression testing.
* Fixed warning in Mac OS X complaining of unused argp structures.
* Fixed bug in Mac OS X where -r argument in bpostprocess caused
an error.
* Updated names of files generated by bmatches and balign.

Version 0.2.2
* Fixed major bug that was introduced in 0.1.10 where matches to 
the reverse strand were being erroneously included.
* Added check when making the indexes that the hash width is less 
than or equal to the key-size.

Version 0.2.1
* Major version change.
* Added option in balign to allow local alignment to only consider
mismatches and color errors.
* Removed memory leak in balign.
* begenerate reads now outputes a read number in the read name.
* Halved the required storage size of the hash in the index.
* Added butil utility bfix which will convert 0.2.1 < reference 
genome and index files to the current version.

Version 0.1.13
* Updated bug in RGIndex where reverse read could have n's.

Version 0.1.12
* bmatches: now option -w can specify which strand to match.
* bevalsim now takes in any bmf or baf file.
* Optimized part of bmatches procedure.  Both forward and reverse
matches wil count towards maxKeyMatches (-K).
* Updated bpreprocess help message.
* Updated bindexhist and bindexdist for color space.
* Fixed bug in bgeneratereads for color space.

Version 0.1.11
* bpostprocess now prints out MAF that complies with UCSC standards.

Version 0.1.10
* bmatches supports only matching to the forward strand.  This 