@@ -1,30 +1,38 @@
-                     Academic Software License
-             BFAST: Blat-like Fast Accurate Search Tool
-                          No Commercial Use
+Trial Version
+Academic Software License
+BFAST: Blat-like Fast Accurate Search Tool
+No Commercial Use
+This License governs the trial use of the accompanying Software, and your use of the Software constitutes acceptance of this license.
 
-
-This License governs use of the accompanying Software, and your use of the Software constitutes acceptance of this license.
-
-You may use this Software for any non-commercial purpose, subject to the restrictions in this license. Uses which are non-commercial include teaching, academic research, and personal experimentation. 
-
+You may use this Software for free for a trial period for any non-commercial purpose, subject to the restrictions in this license. Uses which are considered non-commercial include teaching, academic research, and personal experimentation. 
 You may not use or distribute this Software or any derivative works in any form for any commercial purpose. Examples of commercial purposes would be running business operations, licensing, leasing, or selling the Software, or distributing the Software for use with commercial products. 
+If you want to use this Software for commercial purposes, you must contact UCLA’s Office of Intellectual Property at the address below to obtain a commercial license. You are not authorized to use this Software for any commercial purpose.
 
 You may modify this Software and distribute the modified Software for non-commercial purposes; however, you may not grant rights to the Software or derivative works that are broader than those provided by this License. For example, you may not distribute modifications of the Software under terms that would permit commercial use, or under terms that purport to require the Software or derivative works to be sublicensed to others.
 
-You agree: 
-
+You understand and agree: 
 1.	Not remove any copyright or other notices from the Software.
-
 2.	That if you distribute the Software in source or object form, you will include a verbatim copy of this license.
-
 3.	That if you distribute derivative works of the Software in source code form you do so only under a license that includes all of the provisions of this License, and if you distribute derivative works of the Software solely in object form you do so only under a license that complies with this License.
-
 4.	That if you have modified the Software or created derivative works, and distribute such modifications or derivative works, you will cause the modified files to carry prominent notices so that recipients know that they are not receiving the original Software. Such notices must state: (i) that you have changed the Software; and (ii) the date of any changes.
-
 5.	THAT THIS PRODUCT IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS PRODUCT, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.  YOU MUST PASS THIS LIMITATION OF LIABILITY ON WHENEVER YOU DISTRIBUTE THE SOFTWARE OR DERIVATIVE WORKS.
 
 6.	That if you sue anyone over patents that you think may apply to the Software or anyone's use of the Software, your license to the Software ends automatically.
-
 7.	That your rights under the License end automatically if you breach it in any way.
-
 8.	UCLA reserves all rights not expressly granted to you in this license.
+
+9.	UCLA reserves the right to eliminate the trial period for this software and change the terms of this License at any time and charge a licensing fee for the use of this Software.
+
+© 2008 The Regents of the University of California. All Rights Reserved
+
+
+To obtain a commercial license to this software, please contact:
+
+UCLA Office of Intellectual Property
+11000 Kinross Ste 200
+Los Angeles, CA 90095-1406
+(310) 794-0558 phone
+(310) 794-0638 fax
+http://www.research.ucla.edu/oipa/
+
+
